Fixed css style. Remove <table> from loops, fixed responsive style to align titles and labels correctly

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,4 +139,12 @@ th {
 	text-align:start;
 	}
 
+	.centerTitle {
+		text-align: center;
+	}
+
+	.labelAlign {
+		text-align:start;
+		padding:0.75rem !important;
+	}
 }
